src-errormsg/E10-MissingDataConstraint/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E10-MissingDataConstraint/Plinth.hs:26:18: error: [GHC-39999]
    • No instance for ‘ToData a’ arising from a use of ‘DJust’
      Possible fix:
        add (ToData a) to the context of
          the type signature for:
            fromMaybeData :: forall a. a -> MaybeData a -> a
    • In the pattern: DJust x
      In an equation for ‘fromMaybeData’: fromMaybeData _ (DJust x) = x
   |
26 | fromMaybeData _ (DJust x) = x
   |                  ^^^^^^^
